- fix horizontal scroll - class rename to align-right and shift to scss file

--- a/src/app/child-dev-project/progress-dashboard-widget/progress-dashboard/progress-dashboard.component.scss
+++ b/src/app/child-dev-project/progress-dashboard-widget/progress-dashboard/progress-dashboard.component.scss
@@ -2,9 +2,13 @@
 
 .filler {
   width: 45%;
-  padding-left: 50px;
+  padding-left: 40px;
   padding-right: 5px;
+}
 
+.align-right {
+  padding-right: 10px;
+  text-align: right;
 }
 
 .dashboard-config {
