--- a/src/styles.scss
+++ b/src/styles.scss
@@ -107,10 +107,6 @@ mat-card.dashboard-widget {
   padding: 10px;
 }
 
-.align-dashboard-table-cell{
-  padding-right: 10px;
-  text-align: right;
-}
 
 .app-general {
   background-color: #555555 !important;
